Deploy/kubernetes/namespace-and-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guiyang-mahjong
